primeira altera~cao develop

--- a/boleiros.html
+++ b/boleiros.html
@@ -30,8 +30,7 @@
      
         <h1>Boleiros</h1>
 <h2> O projeto continua</h2>
-        <p>Muita expectativa para o ano de 2024 onde a equipe do Boleiros fez ótimas contratações e veio bem reforçado
-            para nova temporada</p>
+        <p>Muita expectativa para o ano de 2024</p>
             <button class="utimo">clique  aqui</button>
     </div>
 </body>
