--- a/boleiros.html
+++ b/boleiros.html
@@ -30,7 +30,7 @@
      
         <h1>Boleiros</h1>
 <h2> O projeto continua</h2>
-        <p>Muita expectativa para o ano de 2024999999999999999999999999uuuuuuuuuuuuuuittttttty78i</p>
+        <p>Muita expectativa para o ano de 2024</p>
             <button class="utimo">clique  aqui</button>
     </div>
 </body>
